src/test/ui/dyn-star/dyn-to-rigid.stderr
error[E0606]: casting `(dyn* Tr + 'static)` as `usize` is invalid
  --> $DIR/dyn-to-rigid.rs:7:5
   |
LL |     x as usize
   |     ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0606`.
